--- a/node/backend/package.json
+++ b/node/backend/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "backend for stock lists",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "serve": "node index",
+    "serve": "cross-env NODE_ENV=production node index",
+    "dev": "cross-env NODE_ENV=production nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +19,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
