--- a/node/backend/package.json
+++ b/node/backend/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "serve": "cross-env NODE_ENV=production node index",
-    "dev": "cross-env NODE_ENV=production nodemon index",
+    "serve": "env-cmd -e production node index",
+    "dev": "env-cmd -e development nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,8 +19,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1"
   }
 }
