--- a/node/backend/package.json
+++ b/node/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "serve": "env-cmd -e production node index",
     "dev": "env-cmd -e development nodemon index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "env-cmd -e test jest"
   },
   "keywords": [],
   "author": {
@@ -21,5 +21,8 @@
     "body-parser": "^1.19.0",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "jest-esm-transformer": "^1.0.0"
   }
 }
