--- a/node/backend/package.json
+++ b/node/backend/package.json
@@ -20,7 +20,8 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "env-cmd": "^10.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
     "jest-esm-transformer": "^1.0.0"
