--- a/node/backend/package.json
+++ b/node/backend/package.json
@@ -24,6 +24,7 @@
     "express-async-errors": "^3.1.1"
   },
   "devDependencies": {
-    "jest-esm-transformer": "^1.0.0"
+    "jest-esm-transformer": "^1.0.0",
+    "supertest": "^6.1.3"
   }
 }
