--- a/node/backend/package.json
+++ b/node/backend/package.json
@@ -4,16 +4,18 @@
   "description": "backend for stock lists",
   "main": "index.js",
   "type": "module",
+  "private": "true",
   "scripts": {
     "serve": "env-cmd -e production node index",
     "dev": "env-cmd -e development nodemon index",
+    "start": "env-cmd -e production node index",
     "test": "env-cmd -e test jest",
     "test:integration": "env-cmd -e test jest -- test/integration",
     "test:unit": "env-cmd -e test jest -- test/unit"
   },
   "keywords": [],
   "author": {
-    "name": "Victor raton",
+    "name": "Victor Raton",
     "email": "vfbraton@gmail.com",
     "url": "http://github.com/victorfernandesraton"
   },
