--- a/node/frontend/package.json
+++ b/node/frontend/package.json
@@ -12,7 +12,9 @@
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@types/axios": "^0.14.0",
+    "@types/date-fns": "^2.6.0",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
