--- a/node/frontend/package.json
+++ b/node/frontend/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
     "axios": "^0.21.1",
