--- a/node/backend/package.json
+++ b/node/backend/package.json
@@ -25,7 +25,8 @@
     "body-parser": "^1.19.0",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "jest-esm-transformer": "^1.0.0",
