--- a/node/frontend/package.json
+++ b/node/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,6 +14,8 @@
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
+    "@nivo/core": "^0.73.0",
+    "@nivo/line": "^0.73.0",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
     "axios": "^0.21.1",
@@ -22,10 +25,17 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.9",
+    "@types/jest": "^26.0.24",
     "@types/react": "17.0.14",
     "autoprefixer": "^10.3.1",
+    "babel-jest": "^27.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.4",
     "typescript": "4.3.5"
   }
 }
