--- a/node/frontend/package.json
+++ b/node/frontend/package.json
@@ -22,12 +22,14 @@
     "date-fns": "^2.23.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recharts": "^2.0.10"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^26.0.24",
     "@types/react": "17.0.14",
+    "@types/recharts": "^2.0.0",
     "autoprefixer": "^10.3.1",
     "babel-jest": "^27.0.6",
     "enzyme": "^3.11.0",
