--- a/node/frontend/package.json
+++ b/node/frontend/package.json
@@ -7,15 +7,14 @@
     "build": "next build",
     "start": "next start",
     "test": "jest --watch",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prod": "next build && next start"
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
-    "@nivo/core": "^0.73.0",
-    "@nivo/line": "^0.73.0",
     "@types/axios": "^0.14.0",
     "@types/date-fns": "^2.6.0",
     "axios": "^0.21.1",
@@ -29,7 +28,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^26.0.24",
-    "@types/react": "17.0.14",
+    "@types/react": "^17.0.15",
     "@types/recharts": "^2.0.0",
     "autoprefixer": "^10.3.1",
     "babel-jest": "^27.0.6",
